# trilosaurus

./: .gitignore  README.md
trilosaurus_bringup/: CMakeLists.txt  README.md  package.xml  setup.py
trilosaurus_bringup/camera_info/: camera1.yaml  camera1_2.yaml  camera1_ros2.yaml
trilosaurus_bringup/cfg/: camera1_extrinsics.yaml
trilosaurus_bringup/cfg/cartographer/: turtlebot3_lds_2d.lua
trilosaurus_bringup/config/: teleop_twist_joy_MOCUTE.config.yaml  trilosaurus_controllers.yaml  trilosaurus_nav2.yaml
trilosaurus_bringup/launch/: calibration.launch  camera.launch  gcs.launch  pure_pursuit_guidance.launch  robot.launch  trilosaurus.launch.py  trilosaurus_gcs.launch.py  trilosaurus_smocap_ekf.launch.py
trilosaurus_bringup/params/: smocap_ekf2.yaml
trilosaurus_bringup/scripts/: line_guidance.py  line_guidance_display.py  robot_manager_ros.py  test_node.py
trilosaurus_control/: CMakeLists.txt  README  package.xml  trilosaurus_diff_drive_controller.xml
trilosaurus_control/include/trilosaurus_control/: trilosaurus_diff_drive_controller.hpp
trilosaurus_control/msg/: Report.msg
trilosaurus_control/scripts/: ident_node.py  py_node.py  send_test_twist.py
trilosaurus_control/src/: cpp_node.cpp  trilosaurus_diff_drive_controller.cpp
trilosaurus_control/test/: test_load_controller.cpp
trilosaurus_demos/: CMakeLists.txt  package.xml
trilosaurus_demos/config/: demo_cartographer.rviz
trilosaurus_demos/launch/: demo_cartographer.launch.py  demo_nav2.launch.py  demo_orbslam3.launch.py
trilosaurus_description/: CMakeLists.txt  package.xml
trilosaurus_description/launch/: view_trilosaurus.launch.py
trilosaurus_description/ros2_control/: trilosaurus.ros2_control.xacro
trilosaurus_description/urdf/: trilosaurus.urdf.xacro  trilosaurus_description.urdf.xacro
trilosaurus_hardware_interface/: CMakeLists.txt  package.xml  trilosaurus_hardware_interface.xml
trilosaurus_hardware_interface/include/trilosaurus_hardware_interface/: trilobot_driver.h  trilosaurus_robot_hardware.hpp  visibility_control.h
trilosaurus_hardware_interface/src/: trilobot_driver.cpp  trilosaurus_robot_hardware.cpp
trilosaurus_hardware_interface/test/: test_trilosaurus_robot_hardware.cpp
trilosaurus_noros/: README.md
trilosaurus_noros/scripts/: remote_control.py  robot.py  robot.sh  robot_manager.py
trilosaurus_noros/system/: robot.service
